tests/error/poly_errors/non_linear2.err
Error: Type mismatch (at $FILE:15:8)
   | 
13 | @guppy
14 | def main() -> None:
15 |     foo(h)
   |         ^ Expected argument of type `?T -> ?T`, got `() -> None`

Guppy compilation failed due to 1 previous error
